# Azure-DrawIO-MCP

./: README.md  pyproject.toml
.github/skills/update-azure-shapes/: README.md  SKILL.md  analyze_icons.py
azure_drawio_mcp_server/: azure_shapes.py  scanner.py  server.py
