[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azure-drawio-mcp"
version = "0.1.0"
description = "Generate editable Draw.io diagrams for Azure architectures via MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "lilepeeps" }
]
keywords = [
    "azure",
    "drawio",
    "mcp",
    "architecture",
    "diagrams",
    "model-context-protocol"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "drawpyo>=0.2.5",
    "mcp[cli]>=1.11.0",
    "pydantic>=2.10.6",
]

[project.urls]
Homepage = "https://github.com/lilepeeps/Azure-DrawIO-MCP"
Repository = "https://github.com/lilepeeps/Azure-DrawIO-MCP"
Issues = "https://github.com/lilepeeps/Azure-DrawIO-MCP/issues"

[project.scripts]
azure-drawio-mcp = "azure_drawio_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["azure_drawio_mcp_server"]
